<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/board_background"
    tools:context=".ScorpionActivity">
<!--  image source : https://wallpapersafari.com/w/HoBVTE -->

    <RelativeLayout
        android:id="@+id/card_place_layout2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="7dp"
        android:layout_marginTop="100dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <com.example.solitairecollection.CardPlaceCustom
            android:id="@+id/card_place_complete1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_centerInParent="true"/>

        <com.example.solitairecollection.CardPlaceCustom
            android:id="@+id/card_place_complete2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:layout_toEndOf="@+id/card_place_complete1"/>

        <com.example.solitairecollection.CardPlaceCustom
            android:id="@+id/card_place_complete3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:layout_toEndOf="@+id/card_place_complete2"/>

        <com.example.solitairecollection.CardPlaceCustom
            android:id="@+id/card_place_complete4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:layout_toEndOf="@+id/card_place_complete3"/>
    </RelativeLayout>

    <com.example.solitairecollection.CardPlaceCustom
        android:id="@+id/card_place_start"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="5dp"
        app:layout_constraintBottom_toBottomOf="@+id/card_place_layout2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@+id/card_place_layout2"/>

    <RelativeLayout
        android:id="@+id/card_place_layout1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="3dp"
        android:layout_marginTop="50dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/card_place_layout2">

        <com.example.solitairecollection.CardPlaceCustom
            android:id="@+id/card_place1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:layout_toStartOf="@+id/card_place2" />

        <com.example.solitairecollection.CardPlaceCustom
            android:id="@+id/card_place2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_toStartOf="@+id/card_place3" />

        <com.example.solitairecollection.CardPlaceCustom
            android:id="@+id/card_place3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_toStartOf="@+id/card_place4" />

        <com.example.solitairecollection.CardPlaceCustom
            android:id="@+id/card_place4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true" />

        <com.example.solitairecollection.CardPlaceCustom
            android:id="@+id/card_place5"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_toEndOf="@+id/card_place4" />

        <com.example.solitairecollection.CardPlaceCustom
            android:id="@+id/card_place6"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_toEndOf="@+id/card_place5" />

        <com.example.solitairecollection.CardPlaceCustom
            android:id="@+id/card_place7"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_toEndOf="@+id/card_place6" />
    </RelativeLayout>

    <ImageView
        android:id="@+id/resetButton"
        android:layout_width="40dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="16dp"
        android:adjustViewBounds="true"
        android:background="#A57575"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:srcCompat="@android:drawable/stat_notify_sync" />

    <TextView
        android:id="@+id/score_text_view"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginBottom="32dp"
        android:text="@string/score"
        android:textColor="@color/white"
        android:textSize="17sp"
        app:layout_constraintBottom_toTopOf="@+id/undo_button"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/undo_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginBottom="16dp"
        android:text="@string/undo"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/hint_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginBottom="16dp"
        android:text="@string/hint"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toEndOf="@id/undo_button" />

</androidx.constraintlayout.widget.ConstraintLayout>